--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [study]
 youthstudy = yes
 dailycheckin = yes
-studychannel = yes
-answer_questions = yes
+studychannel = no
+answer_questions = no
 
 [push]
-push = yes
+push = no
 channel = wechat
